--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -41,7 +41,7 @@
               <i class="fa fa-lock"></i> Logout</a>
             <ng-template #template>
               <div class="modal-header">
-                <h4 class="modal-title pull-left">Confirm logout?</h4>
+                <h4 class="text-info modal-title pull-left">Confirm logout?</h4>
                 <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
                   <span aria-hidden="true">&times;</span>
                 </button>
