--- a/src/app/features/authentication/register/register.component.html
+++ b/src/app/features/authentication/register/register.component.html
@@ -4,7 +4,7 @@
       <div class="card mx-4">
         <div class="card-body p-4">
           <h1 class="text-center">Register</h1>
-          <p class="text-muted text-center">Create your account</p>
+          <p class="text-info text-muted text-center">Create your account</p>
           <app-feature-authentication-register-form></app-feature-authentication-register-form>
         </div>
 
