edit coupon running with purchasable

--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
@@ -169,7 +169,7 @@
               </div>
               <div class="col-sm-4 col-lg-2 my-auto">
                 <div class="custom-control custom-checkbox">
-                  <input formControlName="valid_until_empty" type="checkbox" class="custom-control-input" id="checkQuantity" data-md-icheck
+                  <input  type="checkbox" class="custom-control-input" id="checkQuantity" data-md-icheck
                          (change)="toggleVisibilityQuatity($event)">
                   <label class="custom-control-label" for="checkQuantity">No limit</label>
                 </div>
