--- a/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
+++ b/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
@@ -156,6 +156,24 @@
             </div>
 
             <div class="form-group row">
+              <label class="col-sm-4 col-lg-2 col-form-label">Max buyable by single user</label>
+              <div  class="col-sm-4 col-lg-8">
+                <input  [readonly]="markedQuantity" type="text" formControlName="purchasable" class="form-control"
+                        [ngClass]="{ 'is-invalid': submitted && f.purchasable.errors }"/>
+                <div *ngIf="submitted && f.purchasable.errors" class="invalid-feedback">
+                  <div *ngIf="f.purchasable.errors">This value must be less than or equal to the quantity created </div>
+                </div>
+              </div>
+              <div class="col-sm-4 col-lg-2 my-auto">
+                <div class="custom-control custom-checkbox">
+                  <input  type="checkbox" class="custom-control-input" id="checkQuantity" data-md-icheck
+                         (change)="toggleVisibilityQuatity($event)">
+                  <label class="custom-control-label" for="checkQuantity">No limit</label>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group row">
 
               <div class="col-sm-10 col-lg-8 my-auto">
                 <div class="custom-control custom-checkbox">
