--- a/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
@@ -16,10 +16,10 @@
             <i class="fas fa-cart-arrow-down" ></i>
           </div>
           <p class="card-text">{{couponPass.description}}</p>
-          <p *ngIf="couponPass.quantity > 10" class="card-text"> Availability:  <i style="color:#19ff26"> Available</i> </p>
-          <p *ngIf="couponPass.quantity > 4 && couponPass.quantity < 10" class="card-text"> Availability: <i style="color:#ffd51c"> Available, in exhaustion</i></p>
-          <p *ngIf="couponPass.quantity > 0 && couponPass.quantity < 5" class="card-text"> Availability: <i style="color:#FF0000"> Only {{couponPass.quantity}} units available </i></p>
-          <p *ngIf="couponPass.quantity < 1" class="card-text"> Availability: <i style="color:rgba(55,87,85,0.15)"> Not available</i></p>
+          <p *ngIf="availability > 10" class="card-text"> Availability:  <i style="color:#19ff26"> Available</i> </p>
+          <p *ngIf="availability > 4 && availability < 10" class="card-text"> Availability: <i style="color:#ffd51c"> Available, in exhaustion</i></p>
+          <p *ngIf="availability > 0 && availability < 5" class="card-text"> Availability: <i style="color:#FF0000"> Only {{availability}} units available </i></p>
+          <p *ngIf="availability < 1" class="card-text"> Availability: <i style="color:rgba(55,87,85,0.15)"> Not available</i></p>
           <p class="card-text">
             <i class="fas fa-fw  fa-clock text-secondary"></i> {{formatUntil(couponPass.valid_until)}}
 
@@ -40,10 +40,11 @@
 
           <button class="col-sm-5 btn btn-danger" (click)="retry()">Back to shopping</button>
           <button *ngIf="!inCart && available" class="col-sm-5 offset-sm-2 btn btn-success" (click)="openModal(template)">Add to cart</button>
-          <button [disabled] = "!available" *ngIf="!inCart && !available" class="col-sm-5 offset-sm-2 btn btn-success" (click)="openModal(template)">Add to cart</button>
+          <button [disabled] = "!available" *ngIf="!inCart && !available" class="col-sm-5 offset-sm-2 btn btn-success" (click)="openModal(template, couponPass.purchasable)">Add to cart</button>
           <button *ngIf="inCart" class="col-sm-5 offset-sm-2 btn btn-success" (click)="viewCart()">Go to cart</button>
 
           <ng-template #template>
+
             <div class="modal-header">
               <h4 class="text-info modal-title pull-left">Add to shopping cart</h4>
               <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
@@ -56,7 +57,7 @@
                 <label style="color: #999999;"  class="col-sm-12"> You are adding  <label class="text-info"> {{couponPass.title}}</label> to cart.  </label>
 
                 <div class="form-group col-sm-12">
-                  <label style="color: #999999;"  class="col-sm-7">Choose the quantity: <label class="text-info" > ({{couponPass.quantity}} available)</label></label>
+                  <label style="color: #999999;"  class="col-sm-7">Choose the quantity: <label class="text-info" > ({{maxQuantity}} available)</label></label>
                   <input  formControlName="quantity"
                           class="col-sm-2 small inline-button-input"
                           type="number" min="1" max="{{couponPass.quantity}}" />
