in list coupon running field sold quantity

--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
@@ -26,7 +26,7 @@
       <td>{{formatPrice(coupon.price)}}</td>
       <td>{{formatState(coupon.state)}}</td>
       <td>{{coupon.quantity}}</td>
-      <td>0</td>
+      <td>{{coupon.buyed}}</td>
 
 
       <td>
