--- a/src/app/features/reserved-area/verifier/verifier.component.html
+++ b/src/app/features/reserved-area/verifier/verifier.component.html
@@ -6,6 +6,8 @@
           <img src="assets/img/add_coupon.png" alt="Add new coupon" style="width:50px; float:left; margin-right:30px"/>
           <h6 class="display-4" style="float:left; font-size:30pt;">Verifier coupon</h6>
         </div>
+        <!--<button class="col-lg-12 col-xl-9 btn btn-block btn-success btn-redeems" (click)="scan()">Scan Qr-code</button>-->
+        <!--<video class="col-lg-12 col-xl-9" id="video" style="border: 1px solid gray"></video>-->
 
         <div class="card-body p-5">
           <form [formGroup]="tokenForm" (ngSubmit)="verifier()">
@@ -28,7 +30,26 @@
             </div>
 
 
+            <div>
+
+
+            </div>
+
+
           </form>
+          <div class="form-group row">
+            <div  class="col-lg-8 col-sm-8">
+              <div *ngIf="isScan">
+                <video width="100%" height="100%"  id="video" style="border: 1px solid gray"></video>
+              </div>
+
+            </div>
+            <div class="form group col-lg-4 col-sm-4">
+              <p>
+                <button class="btn btn-block btn-success btn-redeems" (click)="scan()">Scan Qr-code</button>
+              </p>
+            </div>
+          </div>
 
         </div>
 
