--- a/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
+++ b/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
@@ -111,7 +111,7 @@
               <label class="col-sm-2 col-form-label">Valid Until:</label>
               <div class="col-sm-2">
                 <div class="form-check">
-                  <input type="checkbox" formControlName="valid_until_empty" class="form-check-input" id="check1" data-md-icheck
+                  <input [checked]="isIllimited()" type="checkbox" formControlName="valid_until_empty" class="form-check-input" id="check1" data-md-icheck
                          (change)="toggleVisibility($event)">
                   <label class="form-check-label" for="check1">Unlimited</label>
                 </div>
