purchases and detail purchases done

--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.html
@@ -9,9 +9,9 @@
 
           <p class="card-text">{{couponPass.description}}</p>
         <div class="card-text">
-          <i style="color: #20a8d8" class="col-6">Scan this QR-Code</i>
+          <i style="color: #20a8d8" class="col-6">QR-Code coupon</i>
             <div class="col-6">
-              <qrcode class="col-6" [qrdata]="couponPass.token" [size]="200" [level]="'M'"></qrcode>
+              <qrcode class="col-6" [qrdata]="couponPass.token.token" [size]="200" [level]="'M'"></qrcode>
             </div>
         </div>
           <p class="card-text">
