--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.html
@@ -4,16 +4,16 @@
     <th style="width: 40%">Title</th>
     <th style="width: 10%">Image</th>
     <th style="width: 10%">Price</th>
-    <th style="width: 10%">Unities</th>
-    <th style="width: 10%">State</th>
+    <th style="width: 20%">State</th>
     <th style="width: 10%"></th>
     <th style="width: 10%"></th>
   </tr>
   </thead>
 
-  <tbody>
-  <tr *ngFor="let coupon of coupons">
-    <td>
+  <tbody class="col-sm-12" *ngFor="let coupon of coupons">
+  <tr *ngFor="let token of coupon.CouponTokens " >
+
+    <td >
       <span style="width: 40%; font-size: 17px;">{{coupon.title}}</span> <br/>
       <i style="width: 10%; color: #999; font-size: 15px;">{{coupon.description}}</i>
     </td>
@@ -21,19 +21,18 @@
       <img  class=" img-thumbnail crop centered-and-cropped"   [src]="imageUrl(coupon.image)" alt="Card image cap">
     </td>
     <!--<td>{{coupon.price != 0 ? coupon.price : 'free'}}</td>-->
-    <td style="width: 10%;">{{formatPrice(coupon.price)}}</td>
-    <td style="width: 10%;">{{coupon.quantity}}</td>
-    <td *ngIf="coupon.state === 1" style="width: 10%; color: green">{{formatState(coupon.state)}}</td>
-    <td *ngIf="coupon.state === 2" style="width: 10%; color: red">{{formatState(coupon.state)}}</td>
+    <td  style="width: 10%;">{{formatPrice(coupon.price)}}</td>
+    <td  *ngIf="token.verifier === null" style="width: 20%; color: green">{{formatState(token.verifier)}}</td>
+    <td *ngIf="token.verifier !== null" style="width: 20%; color: red">{{formatState(token.verifier)}}</td>
 
 
     <td style="width: 10%;">
-      <button type="button" (click)="details(coupon)" class="btn btn-info text-white float-right">Details</button>
+      <button type="button" (click)="details(coupon, token)" class="btn btn-info text-white float-right">Details</button>
     </td>
 
     <td style="width: 20%;"></td>
-  </tr>
 
+  </tr>
   </tbody>
 
 </table>
