--- a/src/app/features/reserved-area/consumer/coupon-token/coupon-token.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-token/coupon-token.component.html
@@ -4,11 +4,11 @@
       <div class="card">
         <div class="card-body p-4 b-b-1" style="background:#e0e0e0">
           <img src="assets/img/add_coupon.png" alt="Add new coupon" style="width:50px; float:left; margin-right:30px"/>
-          <h6 class="display-4" style="float:left; font-size:30pt;">Redeems coupon</h6>
+          <h6 class="display-4" style="float:left; font-size:30pt;">Import coupon</h6>
         </div>
 
         <div class="card-body p-5">
-          <form [formGroup]="tokenForm" (ngSubmit)="redeems()">
+          <form [formGroup]="tokenForm" (ngSubmit)="import()">
             <div class="form-group row">
               <label class="col-lg-4 col-sm-4 col-form-label">Insert token</label>
               <div class="col-lg-4 col-sm-4">
@@ -22,7 +22,7 @@
               </div>
               <div class="form group col-lg-4 col-sm-4">
                 <p>
-                  <button class="btn btn-block btn-success btn-redeems">Validate</button>
+                  <button class="btn btn-block btn-success btn-redeems">Import</button>
                 </p>
               </div>
             </div>
