Qr-code reader for consumer (with importCoupon), producer and admin (with redeems coupon)

--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -46,7 +46,7 @@
 
       </div>
 
-      <div *ngIf="this.userType == '3' || this.userType == '0'">
+      <div *ngIf="this.userType == '3' || this.userType == '0' || this.userType == '1'">
         <a [routerLink]="['/reserved-area/verifier']" class="list-group-item list-group-item-action text-white">
           <span class="menu-collapsed">Verifer page</span>
         </a>
