--- a/src/app/features/reserved-area/verifier/verifier.component.html
+++ b/src/app/features/reserved-area/verifier/verifier.component.html
@@ -7,14 +7,13 @@
           <h6 class="display-4" style="float:left; font-size:30pt;">Verifier coupon</h6>
         </div>
         <!--<button class="col-lg-12 col-xl-9 btn btn-block btn-success btn-redeems" (click)="scan()">Scan Qr-code</button>-->
-        <!--<video class="col-lg-12 col-xl-9" id="video" style="border: 1px solid gray"></video>-->
+        <!--<video *ngIf="isScan" class="col-lg-12 col-xl-9" id="video" style="border: 1px solid gray"></video>-->
 
         <div class="card-body p-5">
           <form [formGroup]="tokenForm" (ngSubmit)="verifier()">
             <div class="form-group row">
               <label class="col-lg-4 col-sm-4 col-form-label">Insert token</label>
               <div class="col-lg-4 col-sm-4">
-                <!--<input value="{{couponPass.title}}" type="text" formControlName="title" class="form-control"-->
 
                 <input type="text" formControlName="token" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.token.errors }"/>
