Refactoring coupon-edit

--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
@@ -24,7 +24,7 @@
       </td>
       <!--<td>{{coupon.price != 0 ? coupon.price : 'free'}}</td>-->
       <td>{{formatPrice(coupon.price)}}</td>
-      <td>{{formatState(coupon.state)}}</td>
+      <td>{{formatState(0)}}</td>
       <td>{{coupon.quantity}}</td>
       <td>{{coupon.buyed}}</td>
 
