--- a/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.scss
+++ b/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.scss
@@ -32,3 +32,10 @@ div.divDateTime {
   display:inline-block;
 
 }
+.custom-control.custom-checkbox {
+  padding-top: 8px;
+}
+
+.custom-control-label {
+  padding: 0;
+}
