--- a/src/app/features/reserved-area/verifier/verifier.component.html
+++ b/src/app/features/reserved-area/verifier/verifier.component.html
@@ -6,9 +6,6 @@
           <img src="assets/img/add_coupon.png" alt="Add new coupon" style="width:50px; float:left; margin-right:30px"/>
           <h6 class="display-4" style="float:left; font-size:30pt;">Verifier coupon</h6>
         </div>
-        <!--<button class="col-lg-12 col-xl-9 btn btn-block btn-success btn-redeems" (click)="scan()">Scan Qr-code</button>-->
-        <!--<video *ngIf="isScan" class="col-lg-12 col-xl-9" id="video" style="border: 1px solid gray"></video>-->
-
         <div class="card-body p-5">
           <form [formGroup]="tokenForm" (ngSubmit)="verifier()">
             <div class="form-group row">
@@ -39,7 +36,13 @@
           <div class="form-group row">
             <div  class="col-lg-8 col-sm-8">
               <div *ngIf="isScan">
-                <video width="100%" height="100%"  id="video" style="border: 1px solid gray"></video>
+                <div *ngIf="availableDevices">
+                  <select (change)="onDeviceSelectChange($event.target.value)">
+                    <option value="" [selected]="!selectedDevice">Select Device</option>
+                    <option *ngFor="let device of availableDevices" [value]="device.deviceId" [selected]="selectedDevice && device.deviceId === selectedDevice.deviceId">{{ device.label }}</option>
+                  </select>
+                </div>
+
               </div>
 
             </div>
@@ -49,7 +52,10 @@
               </p>
             </div>
           </div>
+          <div class="form-group row">
+            <zxing-scanner  #scanner class="test-class" start="true" [device]="selectedDevice" (scanSuccess)="handleQrCodeResult($event)"></zxing-scanner>
 
+          </div>
         </div>
 
       </div>
@@ -59,4 +65,5 @@
 
   </div>
 </div>
+
 
