--- a/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.scss
+++ b/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.scss
@@ -24,3 +24,13 @@
 .button-add-del {
   border-radius: 25em !important;
 }
+
+.crop {
+  width: 100%;
+  height: 240px;
+  overflow: hidden !important;
+}
+
+.centered-and-cropped {
+  object-fit: cover
+}
