--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.scss
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.scss
@@ -5,3 +5,13 @@
   font-size:18px;
   min-width: 200px;
 }
+
+.crop {
+  width: 100%;
+  height: 240px;
+  overflow: hidden !important;
+}
+
+.centered-and-cropped {
+  object-fit: cover
+}
